# python-smime-email

./: .gitignore  CODE-OF-CONDUCT.md  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue_template.md
.github/workflows/: publish.yml  test.yml
smime_email/: __init__.py  __main__.py
tests/: test_helpers.py  test_smime_signing.py
