[project]
name = "smime-email"
version = "1.0.1"
description = "A Python library to generate a signed email"
authors = [{ name = "Siemens" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = ["cryptography>=43.0.1,<45.0.0"]

[dependency-groups]
dev = [
    "poethepoet>=0.29.0,<0.30",
    "pytest>=8.3.3,<9",
    "mypy>=1.11.2,<2",
    "pytest-deadfixtures>=2.2.1,<3",
    "coverage>=7.6.1,<8",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
]

[tool.hatch.build.targets.sdist]
include = ["smime_email"]

[tool.hatch.build.targets.wheel]
include = ["smime_email"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov smime_email --cov-report term --cov-report html --cov-report xml --junitxml junit.xml"
filterwarnings = "ignore"
junit_family = "xunit2"

[tool.poe.tasks]
format = {shell = "ruff format && ruff check --fix"}
lint = {shell = "ruff check && pytest --dead-fixtures"}
types = { cmd = "mypy ." }
test = { cmd = "pytest" }
all = { shell = "poe format && poe lint && poe types && poe test" }
